testsuite/tests/properties/invalid_cast/not_node/test.lkt
from common import FooNode, NumberNode, BarNode

class ListNode: FooNode {
    @parse_field nb_list: ASTList[NumberNode]

    @exported fun prop(): Int = node.parent.as[Int]
}
